帐户相关修正 # 注册 # 登录 # Response.StatusCode

--- a/src/routes/Account/Login.less
+++ b/src/routes/Account/Login.less
@@ -16,13 +16,17 @@
       transition: color .3s;
     }
   }
-
+  .password {
+    .forgetpassword {
+      float: right;
+    }
+  }
   .other {
     text-align: left;
     margin-top: 24px;
     line-height: 22px;
 
-    .register {
+    .signup {
       float: right;
     }
   }
