忘记密码、验证邮件。

--- a/src/routes/Account/ForgetPassword/Style.less
+++ b/src/routes/Account/ForgetPassword/Style.less
@@ -5,6 +5,11 @@
   max-width: 500px;
 }
 
+.formItem {
+  margin: 0 auto;
+  align-items: center;
+}
+
 .stepFormText {
   margin-bottom: 24px;
   :global {
