--- a/src/routes/SysSet/TableList.less
+++ b/src/routes/SysSet/TableList.less
@@ -35,6 +35,15 @@
   }
 }
 
+.avatar-uploader > .ant-upload {
+  width: 128px;
+  height: 128px;
+}
+
+.upload-demo-start {
+  margin-top: 16px;
+}
+
 @media screen and (max-width: @screen-lg) {
   .tableListForm :global(.ant-form-item) {
     margin-right: 24px;
