--- a/src/static/js/table.less
+++ b/src/static/js/table.less
@@ -1,5 +1,5 @@
-@import "../../../../node_modules/antd/lib/style/themes/default.less";
-@import "../../../utils/utils.less";
+@import "../../../node_modules/antd/lib/style/themes/default.less";
+@import "../../utils/utils.less";
 
 .tableList {
   .tableListOperator {
@@ -33,6 +33,15 @@
     white-space: nowrap;
     margin-bottom: 24px;
   }
+}
+
+.avatar-uploader > .ant-upload {
+  width: 128px;
+  height: 128px;
+}
+
+.upload-demo-start {
+  margin-top: 16px;
 }
 
 @media screen and (max-width: @screen-lg) {
