--- a/src/routes/Personal/Setting.less
+++ b/src/routes/Personal/Setting.less
@@ -1,4 +1,4 @@
-@import "../../../node_modules/antd/lib/style/themes/default.less";
+@import "~antd/lib/style/themes/default.less";
 @import "../../utils/utils.less";
 
 .pageHeaderContent {
@@ -28,4 +28,9 @@
       margin-bottom: 12px;
     }
   }
+}
+
+.avatar-uploader > .ant-upload {
+  width: 128px;
+  height: 128px;
 }
