修改一些主题样式 修改重置密码已知Bug

--- a/src/routes/Account/Signup.less
+++ b/src/routes/Account/Signup.less
@@ -1,8 +1,10 @@
 @import "~antd/lib/style/themes/default.less";
 
 .main {
-  width: 368px;
+  width: 480px;
   margin: 0 auto;
+  box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+  padding: 50px 50px 50px 50px;
 
   :global {
     .ant-form-item {
