--- a/src/routes/Basic/Brand/Brand.less
+++ b/src/routes/Basic/Brand/Brand.less
@@ -1,5 +1,4 @@
-@import "../../../node_modules/antd/lib/style/themes/default.less";
-@import "../../utils/utils.less";
+@import "~antd/lib/style/themes/default.less";
 
 .tableList {
   .tableListOperator {
