个人设置及其相关模块 1.个人信息编辑 2.头像上传 3.修改一些已知Bug

--- a/src/routes/Personal/Setting.less
+++ b/src/routes/Personal/Setting.less
@@ -28,9 +28,20 @@
       margin-bottom: 12px;
     }
   }
+
+  .uploader > .upload {
+    width: 128px;
+    height: 128px;
+  }
+
+  .img {
+    width: 128px;
+    height: 128px;
+  }
+
+  .avatar-uploader > .ant-upload {
+    width: 128px;
+    height: 128px;
+  }
 }
 
-.avatar-uploader > .ant-upload {
-  width: 128px;
-  height: 128px;
-}
